--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,13 +24,15 @@ test:
   only:
     - master
   script:
-    - docker run --rm -t $IMAGE:$TAG kubectl --version
+    - docker run --rm -t $IMAGE:$TAG kubectl version
+    - docker run --rm -t $IMAGE:$TAG gcloud version
 
 test_devel: 
   except:
     - master
   script:
-    - docker run --rm -t $IMAGE:$CI_COMMIT_REF_SLUG kubectl --version
+    - docker run --rm -t $IMAGE:$CI_COMMIT_REF_SLUG kubectl version
+    - docker run --rm -t $IMAGE:$CI_COMMIT_REF_SLUG gcloud version
 
 publish: 
   only:
