Update upstream gcloud image before building our own docker image
If we don't do a `pull` before `docker build`, we would use the old
already cached version.

Bump version to 1.1.1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,14 +13,15 @@ build:
   only:
     - master
   script:
-    - "docker build -t $IMAGE:$TAG ."
+    - docker pull google/cloud-sdk:alpine # update local copy of the cloud-sdk
+    - docker build -t $IMAGE:$TAG .
 
 build_devel:
   stage: build
   except:
     - master
   script:
-    - "docker build -t $IMAGE:$CI_COMMIT_REF_SLUG ."
+    - docker build -t $IMAGE:$CI_COMMIT_REF_SLUG .
 
 test: 
   stage: test
