--- a/.travis.yml
+++ b/.travis.yml
@@ -25,14 +25,17 @@ jobs:
       script:
         - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
         - LATEST_KUBE_VERSION=$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)
+        - TAG=$(echo $TRAVIS_BRANCH | tr "/" "-")
 
         - docker build -t claranet/gcloud-kubectl-docker:latest --build-args KUBE_VERSION=$LATEST_KUBE_VERSION .
 
-        - docker tag claranet/gcloud-kubectl-docker:latest claranet/gcloud-kubectl-docker:${LATEST_KUBE_VERSION}-${TRAVIS_BRANCH}
+        - docker tag claranet/gcloud-kubectl-docker:latest claranet/gcloud-kubectl-docker:${LATEST_KUBE_VERSION}-${TAG}
         - docker tag claranet/gcloud-kubectl-docker:latest claranet/gcloud-kubectl-docker:${LATEST_KUBE_VERSION}-latest
 
         - echo docker push claranet/gcloud-kubectl-docker:latest
-        - echo docker push claranet/gcloud-kubectl-docker:${LATEST_KUBE_VERSION}-${TRAVIS_BRANCH}
+        - echo docker push claranet/gcloud-kubectl-docker:${LATEST_KUBE_VERSION}-${TAG}
         - echo docker push claranet/gcloud-kubectl-docker:${LATEST_KUBE_VERSION}-latest
+
+        - echo "done"
 
 
