--- a/.github/workflows/build-and-release-image.yaml
+++ b/.github/workflows/build-and-release-image.yaml
@@ -56,4 +56,4 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-          bin/image publish;
+          bin/image push;
